[tool.poetry]
name = "pyrolink"
version = "1.0.1"  # Replace this with the actual version if dynamically determined
description = "Elegant, modern and asynchronous Telegram MTProto API framework in Python for users and bots"
authors = ["Venom <venombolteop@gmail.com>"]
readme = "README.md"
license = "LGPLv3"
homepage = "https://github.com/venombolteop"
repository = "https://github.com/venombolteop/pyrolink"
documentation = "https://docs.pyrogram.org"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"  # Replace with specific dependencies from requirements.txt
pyaes== "*"
pysocks== "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
twine = "*"

[tool.poetry.scripts]
pyrolink = "pyrolink.cli:main"  # Adjust the entry point based on your project structure

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

